// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Ellipsis direction end 1`] = `
<div
  class="adm-overflow adm-overflow-viewport"
  data-testid="overflow"
  style="display: block;"
>
  <div
    class="adm-overflow-viewport-content"
    style="max-height: 20px;"
  >
    <span
      class="adm-overflow-viewport-inline"
    >
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
      <div
        class="adm-overflow-viewport-observer"
      />
    </span>
  </div>
  <div
    class="adm-overflow-viewport-btns adm-overflow-justify-end"
  >
    <div
      class="adm-overflow-more"
    >
      <a
        class="adm-overflow-link adm-overflow-shadow"
      >
        ...
      </a>
    </div>
  </div>
</div>
`;

exports[`Ellipsis expand and collapse 1`] = `
<div
  class="adm-overflow adm-overflow-viewport"
  data-testid="overflow"
  style="display: block;"
>
  <div
    class="adm-overflow-viewport-content"
    style="max-height: none;"
  >
    <span
      class="adm-overflow-viewport-inline"
    >
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
      <div
        class="adm-overflow-viewport-observer"
      />
    </span>
  </div>
  <div
    class="adm-overflow-viewport-btns adm-overflow-justify-end"
  >
    <div
      class="adm-overflow-less"
    >
      <a
        class="adm-overflow-link"
      >
        collapse
      </a>
    </div>
  </div>
</div>
`;

exports[`Ellipsis expand and collapse 2`] = `
<div
  class="adm-overflow adm-overflow-viewport"
  data-testid="overflow"
  style="display: block;"
>
  <div
    class="adm-overflow-viewport-content"
    style="max-height: 20px;"
  >
    <span
      class="adm-overflow-viewport-inline"
    >
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
      <div
        class="adm-overflow-viewport-observer"
      />
    </span>
  </div>
  <div
    class="adm-overflow-viewport-btns adm-overflow-justify-end"
  >
    <div
      class="adm-overflow-more"
    >
      <a
        class="adm-overflow-link adm-overflow-shadow"
      >
        expand
      </a>
    </div>
  </div>
</div>
`;

exports[`Ellipsis multi line 1`] = `
<div
  class="adm-overflow adm-overflow-viewport"
  data-testid="overflow"
  style="display: block;"
>
  <div
    class="adm-overflow-viewport-content"
    style="max-height: 59px;"
  >
    <span
      class="adm-overflow-viewport-inline"
    >
      蚂蚁的企业级产品是一个庞大且复杂的体系。这类产品不仅量级巨大且功能复杂，而且变动和并发频繁，常常需要设计与开发能够快速的做出响应。同时这类产品中有存在很多类似的页面以及组件，可以通过抽象得到一些稳定且高复用性的内容。
      <div
        class="adm-overflow-viewport-observer"
      />
    </span>
  </div>
  <div
    class="adm-overflow-viewport-btns adm-overflow-justify-end"
  >
    <div
      class="adm-overflow-more"
    >
      <a
        class="adm-overflow-link adm-overflow-shadow"
      >
        ...
      </a>
    </div>
  </div>
</div>
`;
